стилизация кнопок управления

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,11 @@
 
 @import "components/title";
 @import "components/filter";
+
+// Blocks
+// ---------------------
+
+@import "blocks/header";
+@import "blocks/controls";
+@import "blocks/navigation";
+@import "blocks/accessory";
