--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,7 +1,20 @@
 // Colors
 
+$color-white:                            #ffffff;
+$color-black-russian:                    #1f1f20;
+$color-mid-grey:                         #64696c;
+$color-ghost-white:                      #f3f3f8;
+$color-ghost-white-2:                    #f9f9fc;
+$color-neon-blue:                        #454eec;
+$color-malibu:                           #52b3f2;
+$color-pale-green:                       #98f8a0;
+$color-screamin-green:                   #43fd6c;
+$color-golden-tainoi:                    #fdbe43;
+$color-coral-red:                        #fd4343;
+
+
 
 
 // Fonts
 
-$font-family--neue:               "Neue", "Arial", sans-serif;
+$font-family--neue:                       "Neue", "Arial", sans-serif;
