--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -15,6 +15,10 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -29,6 +33,9 @@ a {
 }
 
 .wrapper {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 0.5fr 1fr;
 }
