верстка, стилизация и оживление навигации

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,6 +16,7 @@
 
 @import "components/title";
 @import "components/filter";
+@import "components/nav-title";
 
 // Blocks
 // ---------------------
