--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -17,4 +17,8 @@ $color-coral-red:                        #fd4343;
 
 // Fonts
 
-$font-family--neue:                       "Neue", "Arial", sans-serif;
+$font-family--neue:                      "Neue", "Arial", sans-serif;
+
+// Animation
+
+$trans-03:                                0.3s ease;
