--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,17 +1,19 @@
 .header {
-
   &__wrapper {
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     padding: 20px 26px 32px;
   }
 
   &__controls {
+    flex-shrink: 0;
     margin: 0 0 35px 0;
     width: 100%;
   }
 
   &__logo {
+    flex-shrink: 0;
     margin: 0 0 38px 0;
 
     svg {
@@ -22,5 +24,16 @@
   &__logo-link {
     display: block;
     width: max-content;
+  }
+
+  &__navigation {
+    flex-grow: 1;
+    margin: 0 0 40px 0;
+  }
+
+  &__accessory {
+    flex-shrink: 0;
+    padding-top: 30px;
+    border-top: 1px solid $color-ghost-white;
   }
 }
