--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -1,3 +1,7 @@
+html {
+  background-color: $color-black-russian;
+}
+
 body {
   font-style: normal;
   font-weight: 400;
@@ -36,8 +40,13 @@ ul {
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: 0.5fr 1fr;
+
+  &__border {
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+    border-radius: 25px;
+    background-color: $color-white;
+  }
 }
 
 *,
