--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -40,12 +40,13 @@ ul {
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
+  padding: 20px 0;
 
   &__border {
     display: grid;
-    grid-template-columns: 0.5fr 1fr;
+    grid-template-columns: 0.3fr 1fr;
     border-radius: 25px;
-    background-color: $color-white;
+    background-color: $color-ghost-white-2;
   }
 }
 
