сетка и стили основного контента

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,8 @@
 @import "mixins";
 @import "global/fonts";
 @import "global/utils";
+@import "global/wrapper";
+@import "global/container";
 
 // Components
 // ---------------------
@@ -17,6 +19,7 @@
 @import "components/title";
 @import "components/filter";
 @import "components/nav-title";
+@import "components/block";
 
 // Blocks
 // ---------------------
@@ -25,3 +28,10 @@
 @import "blocks/controls";
 @import "blocks/navigation";
 @import "blocks/accessory";
+@import "blocks/main-header";
+@import "blocks/tools";
+@import "blocks/dashboard";
+@import "blocks/overview";
+@import "blocks/income";
+@import "blocks/popular";
+@import "blocks/comments";
