подключение и стилизация времен.селекта

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 @import "components/filter";
 @import "components/nav-title";
 @import "components/block";
+@import "components/custom-select";
 
 // Blocks
 // ---------------------
