--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,3 +36,5 @@
 @import "blocks/income";
 @import "blocks/popular";
 @import "blocks/comments";
+@import "blocks/statistics";
+@import "blocks/experts";
