--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -12,6 +12,11 @@ body {
 
 a {
   text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+button {
+  -webkit-tap-highlight-color: transparent;
 }
 
 ul {
