--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -39,3 +39,5 @@
 @import "blocks/statistics";
 @import "blocks/experts";
 @import "blocks/chart";
+@import "blocks/goods";
+@import "blocks/product";
