--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,6 +12,10 @@ $color-screamin-green:                   #43fd6c;
 $color-golden-tainoi:                    #fdbe43;
 $color-coral-red:                        #fd4343;
 
+// Transparency
+
+$transparent-neon-blue-03:               rgba(69, 78, 236, 0.3);
+
 // Fonts
 
 $font-family--neue:                      "Neue", "Arial", sans-serif;
