--- a/source/sass/blocks/tools.scss
+++ b/source/sass/blocks/tools.scss
@@ -11,6 +11,17 @@
 
   &__link {
     color: $color-mid-grey;
+
+    svg {
+      transition: color $trans-03;
+    }
+
+    &:hover {
+      svg {
+        color: $color-neon-blue;
+        transition: color $trans-03;
+      }
+    }
   }
 
   &__link--unread {
