--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,4 +22,9 @@ $font-family--neue:                      "Neue", "Arial", sans-serif;
 
 // Animation
 
-$trans-03:                                0.3s ease;
+$trans-03:                               0.3s ease;
+
+// Viewports
+
+$vp--320:                                320px;
+$vp--1024:                               1024px;
