--- a/source/sass/blocks/dashboard.scss
+++ b/source/sass/blocks/dashboard.scss
@@ -2,9 +2,16 @@
   &__wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: min-content 0.8fr 1.1fr 0.7fr 0.7fr;
+    grid-template-rows: min-content 0.6fr 1fr 0.6fr 0.5fr;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
+
+    @include tablet {
+      display: flex;
+      flex-direction: column;
+      grid-row-gap: 15px;
+      grid-column-gap: 0px;
+    }
   }
 
   &__title {
