--- a/source/sass/blocks/experts.scss
+++ b/source/sass/blocks/experts.scss
@@ -19,16 +19,24 @@
   &__list {
     margin: 0;
     padding: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 7%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
   }
 
   &__item {
+    display: block;
+    width: 28%;
     display: grid;
     grid-template-columns: 0.5fr 1fr;
     grid-template-rows: auto auto;
-    grid-column-gap: 10px;
+    grid-column-gap: 5%;
+
+    @media (max-width: 1248px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
     picture {
       grid-row: 1 / -1;
@@ -49,6 +57,19 @@
       font-size: 14px;
       line-height: 17px;
       color: $color-mid-grey;
+
+      @media (max-width: 1248px) {
+        text-align: center;
+        max-width: 70%;
+      }
+    }
+  }
+
+  &__item:not(:last-child) {
+    margin-right: 8%;
+
+    @media (max-width: 1248px) {
+      margin-right: 5%;
     }
   }
 }
