--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -8,6 +8,14 @@
     display: flex;
     flex-direction: column;
     padding: 20px 26px 32px;
+
+    @media (max-width: 1150px) {
+      padding: 20px 16px 32px;
+    }
+
+    @include tablet {
+      padding: 20px 12px 32px;
+    }
   }
 
   &__controls {
