--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -4,9 +4,17 @@
   grid-column-gap: 20px;
   margin-bottom: 30px;
 
+  @include tablet {
+    grid-template-columns: 1fr 1fr;
+  }
+
   &__search {
     grid-column: 1 / 3;
     position: relative;
+
+    @include tablet {
+      grid-column: 1 / 2;
+    }
 
     input {
       width: 100%;
