--- a/source/sass/blocks/popular.scss
+++ b/source/sass/blocks/popular.scss
@@ -2,6 +2,12 @@
   display: flex;
   flex-direction: column;
 
+  &__block {
+    @include tablet {
+      margin: 0 0 20px 0;
+    }
+  }
+
   &__link {
     margin-top: auto;
     align-self: center;
