--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,7 @@
 @import "components/nav-title";
 @import "components/block";
 @import "components/custom-select";
+@import "components/burger-button";
 
 // Blocks
 // ---------------------
