--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -2,34 +2,55 @@
   background-color: $color-white;
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
+  height: 100%;
+
+  @include mobile {
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    height: auto;
+    position: fixed;
+    z-index: 5;
+  }
 
   &__wrapper {
-    min-height: 100%;
+    position: relative;
+    height: 100%;
     display: flex;
     flex-direction: column;
     padding: 20px 26px 32px;
 
     @media (max-width: 1150px) {
-      padding: 20px 16px 32px;
+      padding: 20px 16px;
     }
 
     @include tablet {
       padding: 20px 12px 32px;
     }
+
+    @include mobile {
+      height: auto;
+    }
   }
 
   &__controls {
-    flex-shrink: 0;
     margin: 0 0 35px 0;
     width: 100%;
+
+    @include mobile {
+      margin: 0;
+    }
   }
 
   &__logo {
-    flex-shrink: 0;
     margin: 0 0 38px 0;
 
     svg {
       color: $color-malibu;
+    }
+
+    @include mobile {
+      margin: 0;
     }
   }
 
@@ -38,14 +59,48 @@
     width: max-content;
   }
 
+  &__menu {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    @include mobile {
+      height: 0;
+      overflow: hidden;
+    }
+  }
+
+  &__menu-button {
+    display: none;
+
+    @include mobile {
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 31px;
+    }
+  }
+
   &__navigation {
     flex-grow: 1;
     margin: 0 0 40px 0;
+
+    // @include mobile {
+    //   margin: 0 0 30px 0;
+    //   flex-grow: 0;
+    // }
   }
 
   &__accessory {
     flex-shrink: 0;
+    margin-top: auto;
     padding-top: 30px;
     border-top: 1px solid $color-ghost-white;
+
+    // @include mobile {
+    //   padding-top: 15px;
+    //   flex-shrink: 0;
+    // }
   }
 }
