--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -8,6 +8,12 @@
     grid-template-columns: 1fr 1fr;
   }
 
+  @include mobile {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 20px;
+  }
+
   &__search {
     grid-column: 1 / 3;
     position: relative;
@@ -28,7 +34,6 @@
         font-weight: 400;
         font-size: 18px;
         line-height: 22px;
-
         color: $color-mid-grey;
       }
     }
@@ -66,5 +71,9 @@
   &__personal {
     display: flex;
     align-items: center;
+
+    @include mobile {
+      margin: 0 0 20px 0;
+    }
   }
 }
