реализовывает мобильное меню

--- a/source/sass/blocks/comments.scss
+++ b/source/sass/blocks/comments.scss
@@ -11,6 +11,10 @@
       line-height: 25px;
       color: $color-black-russian;
 
+      @include tablet {
+        max-width: 90%;
+      }
+
       &:hover {
         text-decoration: underline;
       }
