--- a/source/sass/blocks/income.scss
+++ b/source/sass/blocks/income.scss
@@ -7,7 +7,12 @@
     height: 350px;
   }
 
+  @include mobile {
+    height: auto;
+  }
+
   &__chart {
+
     @include tablet {
       justify-self: end;
     }
