--- a/source/sass/components/custom-select.scss
+++ b/source/sass/components/custom-select.scss
@@ -193,7 +193,7 @@
     margin-top: -11px;
     width: 16px;
     height: 16px;
-    background-image: url("../img/icon-filter.svg");
+    background-image: url("../img/sprite/icon-filter.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
   }
