--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,6 +15,7 @@ $color-coral-red:                        #fd4343;
 // Transparency
 
 $transparent-neon-blue-03:               rgba(69, 78, 236, 0.3);
+$transparent-mid-grey-03:                rgba(100, 105, 108, 0.3);
 
 // Fonts
 
