--- a/source/sass/blocks/chart.scss
+++ b/source/sass/blocks/chart.scss
@@ -8,6 +8,10 @@
     display: flex;
     align-items: flex-end;
     height: 100%;
+
+    @include mobile {
+      flex-direction: column;
+    }
   }
 
   &__item {
@@ -22,10 +26,26 @@
     flex-direction: column;
     align-items: center;
     justify-content: end;
+
+    @include mobile {
+      align-items: flex-start;
+      font-size: 16px;
+      line-height: 25px;
+    }
   }
 
   &__item:not(:first-child) {
     margin-left: 10px;
+
+    @include mobile {
+      margin-left: 0;
+    }
+  }
+
+  &__item:not(:last-child) {
+    @include mobile {
+      margin-bottom: 10px;
+    }
   }
 
   &__item::before {
@@ -34,9 +54,17 @@
     bottom: 26px;
     width: 100%;
     border-radius: 10px 10px 0px 0px;
+
+    @include mobile {
+      left: 32px;
+      bottom: 0;
+      width: 0;
+      height: 100%;
+      border-radius: 0 10px 10px 0px;
+    }
   }
 
-  &__item:nth-child(2n+1)::before {
+  &__item:nth-child(2n + 1)::before {
     background-color: $color-neon-blue;
   }
 
@@ -46,53 +74,118 @@
 
   &__item:first-child::before {
     height: 20%;
+
+    @include mobile {
+      width: 20%;
+      height: 100%;
+    }
   }
 
   &__item:first-child + li::before {
     height: 40%;
+
+    @include mobile {
+      width: 40%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(3)::before {
     height: 35%;
+
+    @include mobile {
+      width: 35%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(4)::before {
     height: 10%;
+
+    @include mobile {
+      width: 10%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(5)::before {
     height: 90%;
+
+    @include mobile {
+      width: 90%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(6)::before {
     height: 12%;
+
+    @include mobile {
+      width: 12%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(7)::before {
     height: 10%;
+
+    @include mobile {
+      width: 10%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(8)::before {
     height: 70%;
+
+    @include mobile {
+      width: 70%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(9)::before {
     height: 20%;
+
+    @include mobile {
+      width: 20%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(10)::before {
     height: 55%;
+
+    @include mobile {
+      width: 55%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(11)::before {
     height: 10%;
+
+    @include mobile {
+      width: 10%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(12)::before {
     height: 10%;
+
+    @include mobile {
+      width: 10%;
+      height: 100%;
+    }
   }
 
   &__item:nth-child(13)::before {
     height: 10%;
+
+    @include mobile {
+      width: 10%;
+      height: 100%;
+    }
   }
 }
