--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,9 +5,12 @@
   height: 100%;
 
   @include mobile {
-    border-top-right-radius: 25px;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
+    background-color: $color-white;
+    box-shadow: 0 0 15px 3px $transparent-mid-grey-03;
     height: auto;
     position: fixed;
     z-index: 5;
@@ -68,6 +71,7 @@
     @include mobile {
       height: 0;
       overflow: hidden;
+      transition: height $trans-03;
     }
   }
 
@@ -86,10 +90,10 @@
     flex-grow: 1;
     margin: 0 0 40px 0;
 
-    // @include mobile {
-    //   margin: 0 0 30px 0;
-    //   flex-grow: 0;
-    // }
+    @include mobile {
+      margin: 0 0 30px 0;
+      flex-grow: 0;
+    }
   }
 
   &__accessory {
@@ -98,9 +102,17 @@
     padding-top: 30px;
     border-top: 1px solid $color-ghost-white;
 
-    // @include mobile {
-    //   padding-top: 15px;
-    //   flex-shrink: 0;
-    // }
+    @include mobile {
+      padding-top: 15px;
+      flex-shrink: 0;
+    }
   }
+}
+
+.header__menu.is-open {
+  height: 100vh;
+  height: calc(89 * var(--vh, 1vh));
+  padding-top: 20px;
+  overflow: auto;
+  transition: height $trans-03;
 }
