--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -13,6 +13,7 @@
     padding: 12px;
     border-radius: 10px;
     transition: background-color $trans-03;
+    -webkit-tap-highlight-color: transparent;
 
     p {
       display: block;
