--- a/source/sass/blocks/statistics.scss
+++ b/source/sass/blocks/statistics.scss
@@ -4,6 +4,11 @@
   grid-template-columns: 1fr 1fr;
   margin: 0 0 40px 0;
 
+  @include mobile {
+    display: flex;
+    flex-direction: column;
+  }
+
   &__title {
     padding: 0;
     margin: 0;
@@ -19,11 +24,14 @@
   padding: 30px 20px;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   grid-row-gap: 10px;
 
+  @include mobile {
+    padding: 20px 10px;
+  }
+
   span {
-    width: 39px;
-    height: 29px;
     border-radius: 100px;
     padding: 5px 8px;
     text-align: center;
@@ -48,15 +56,28 @@
       font-size: 35px;
       line-height: 43px;
     }
+
+    @include tablet {
+      font-size: 30px;
+      line-height: 38px;
+    }
   }
 }
 
 .statistics__block--customers {
   border-radius: 16px 0px 0px 16px;
   background-color: $color-ghost-white-2;
+
+  @include mobile {
+    border-radius: 16px 16px 0 0;
+  }
 }
 
 .statistics__block--income {
   border-radius: 0px 16px 16px 0px;
   background-color: $color-ghost-white;
+
+  @include mobile {
+    border-radius: 0 0 16px 16px;
+  }
 }
