--- a/source/sass/blocks/chart.scss
+++ b/source/sass/blocks/chart.scss
@@ -53,14 +53,14 @@
     position: absolute;
     bottom: 26px;
     width: 100%;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0 0;
 
     @include mobile {
       left: 32px;
       bottom: 0;
       width: 0;
       height: 100%;
-      border-radius: 0 10px 10px 0px;
+      border-radius: 0 10px 10px 0;
     }
   }
 
@@ -90,7 +90,7 @@
     }
   }
 
-  &__item:nth-child(3)::before {
+  &__item:nth-child(8n-5)::before {
     height: 35%;
 
     @include mobile {
@@ -99,7 +99,7 @@
     }
   }
 
-  &__item:nth-child(4)::before {
+  &__item:nth-child(8n-4)::before {
     height: 10%;
 
     @include mobile {
@@ -108,7 +108,7 @@
     }
   }
 
-  &__item:nth-child(5)::before {
+  &__item:nth-child(8n-3)::before {
     height: 90%;
 
     @include mobile {
@@ -117,7 +117,7 @@
     }
   }
 
-  &__item:nth-child(6)::before {
+  &__item:nth-child(8n-2)::before {
     height: 12%;
 
     @include mobile {
@@ -126,7 +126,7 @@
     }
   }
 
-  &__item:nth-child(7)::before {
+  &__item:nth-child(8n-1)::before {
     height: 10%;
 
     @include mobile {
@@ -135,7 +135,7 @@
     }
   }
 
-  &__item:nth-child(8)::before {
+  &__item:nth-child(9n-1)::before {
     height: 70%;
 
     @include mobile {
@@ -144,7 +144,7 @@
     }
   }
 
-  &__item:nth-child(9)::before {
+  &__item:nth-child(10n-1)::before {
     height: 20%;
 
     @include mobile {
@@ -153,7 +153,7 @@
     }
   }
 
-  &__item:nth-child(10)::before {
+  &__item:nth-child(11n-1)::before {
     height: 55%;
 
     @include mobile {
@@ -162,7 +162,7 @@
     }
   }
 
-  &__item:nth-child(11)::before {
+  &__item:nth-child(12n-1)::before {
     height: 10%;
 
     @include mobile {
@@ -171,7 +171,7 @@
     }
   }
 
-  &__item:nth-child(12)::before {
+  &__item:nth-last-child(-n+2)::before {
     height: 10%;
 
     @include mobile {
@@ -180,7 +180,7 @@
     }
   }
 
-  &__item:nth-child(13)::before {
+  &__item:last-child::before {
     height: 10%;
 
     @include mobile {
