--- a/source/sass/blocks/dashboard.scss
+++ b/source/sass/blocks/dashboard.scss
@@ -7,14 +7,14 @@
     grid-row-gap: 20px;
 
     @media (max-width: 1250px) {
-      grid-template-rows: min-content 1fr 1.2fr .3fr .5fr;
+      grid-template-rows: min-content 1fr 1.2fr 0.3fr 0.5fr;
     }
 
     @include tablet {
       display: flex;
       flex-direction: column;
       grid-row-gap: 15px;
-      grid-column-gap: 0px;
+      grid-column-gap: 0;
     }
   }
 
