поиск, кабинет в отд.ком-ты и испр.переполнение

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -38,3 +38,5 @@
 @import "blocks/chart";
 @import "blocks/goods";
 @import "blocks/product";
+@import "blocks/profile";
+@import "blocks/search-bar";
