--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -3,6 +3,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 20px;
   margin-bottom: 30px;
+  align-items: center;
 
   @include tablet {
     grid-template-columns: 1fr 1fr;
@@ -11,6 +12,7 @@
   @include mobile {
     display: flex;
     flex-direction: column-reverse;
+    align-items: stretch;
     margin-bottom: 20px;
   }
 
@@ -20,69 +22,6 @@
 
     @include tablet {
       grid-column: 1 / 2;
-    }
-
-    input {
-      width: 100%;
-      border: none;
-      height: 54px;
-      padding: 16px 0 16px 56px;
-      border-radius: 10px;
-      background-color: $color-white;
-    }
-
-    input::placeholder {
-      font-weight: 400;
-      font-size: 18px;
-      line-height: 22px;
-      color: $color-mid-grey;
-    }
-
-    input:focus {
-      outline: none;
-    }
-
-    svg {
-      color: $color-mid-grey;
-      position: absolute;
-      left: 14px;
-      top: 50%;
-      margin-top: -13px;
-    }
-  }
-
-  &__personal-add-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 54px;
-    height: 54px;
-    border-radius: 50%;
-    background-color: $color-neon-blue;
-    color: $color-white;
-    transition: background-color $trans-03;
-
-    &:hover {
-      background-color: $transparent-neon-blue-03;
-      transition: background-color $trans-03;
-    }
-  }
-
-  &__personal {
-    display: flex;
-    align-items: center;
-
-    @include mobile {
-      margin: 0 0 20px 0;
-      justify-content: end;
-    }
-  }
-
-  &__personal-list {
-    margin: 0 0 0 auto;
-
-    @include mobile {
-      margin-left: 40px;
     }
   }
 }
